--- a/tahitirealty.cfg
+++ b/tahitirealty.cfg
@@ -1,5 +1,5 @@
 [options]
-addons_path = /home/tamatini/odoo-dev/tahitirealty/src/odoo/odoo/addons,/home/tamatini/odoo-dev/tahitirealty/src/odoo/addons,/home/tamatini/odoo-dev/tahitirealty/local
+addons_path = /home/tamatini/odoo-dev/tahitirealty/src/odoo/odoo/addons, /home/tamatini/odoo-dev/tahitirealty/src/odoo/addons, ~/odoo-dev/tahitirealty/src/partner-contact
 admin_passwd = $pbkdf2-sha512$25000$/J8TwlgLAcD435uTcs7Zew$aeUFFsNfZv0yar9hMUttzTY053AW/5JQ8pAu9CDGy5rWOMhj2z8m.4b7jGNoScwCoiX5Kl51WnlrN1aVlLTWfA
 csv_internal_sep = ,
 data_dir = /home/tamatini/odoo-dev/tahitirealty/filestore
